added startgame function

--- a/Pong.html
+++ b/Pong.html
@@ -11,5 +11,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <script src="pong.js"></script>
+    <button onclick="startGame()">Start Game</button>
+
   </body>
 </html>
