--- a/Pong.html
+++ b/Pong.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="600" height="400"></canvas>
     <script src="pong.js"></script>
     <button onclick="startGame()">Start Game</button>
 
