--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,14 @@
     <style>
       canvas {
         border: 1px solid black;
+        background: black;
+        display: block;
+        margin: auto;
       }
     </style>
   </head>
   <body>
-    <canvas id="canvas" width="600" height="400"></canvas>
+    <canvas id="canvas" width="1024" height="720"></canvas>
     <button onclick="startGame()">Start Game</button>
     <script src="pong.js"></script>
 
