--- a/Test.html
+++ b/Test.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Test</title>
+    <meta charset="utf-8" />
+    <title>Pong</title>
+    <style>
+      canvas {
+        border: 1px solid black;
+        background: black;
+        display: block;
+        margin: auto;
+      }
+    </style>
   </head>
   <body>
+    <canvas id="canvas" width="1024" height="720"></canvas>
+    <button onclick="draw()">Start Game</button>
     <script src="test.js"></script>
   </body>
 </html>
